<resources>
    <string name="app_name">The Real Yama</string>
    <string name="login">Sign in</string>
    <string name="user_id">User ID</string>
    <string name="token">Token</string>
    <string name="organization">Organization</string>
    <string name="preference_file_key">baltasarb.yama.PREFERENCE_FILE_KEY</string>
    <string name="preference_token">PREFERENCE_TOKEN</string>
    <string name="preference_user_id">PREFERENCE_USER_ID</string>
    <string name="organizations">Organizations</string>
    <string name="avatar">avatar</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="no_email">No email</string>
    <string name="organization_s">Organizations</string>
    <string name="organizationTeamsTitle">teams</string>
    <string name="no_description_available">No description Available.</string>
    <string name="teamMembersTitle">members</string>
    <string name="under_construction">Under Construction</string>
    <string name="chat_button">Open chat</string>
    <string name="sign_out">Sign out</string>
    <string name="error_info_message">Whoops, something went wrong on our end.</string>
    <string name="app_logo">app logo</string>
    <string name="email">Email</string>
    <string name="enter_message_placeholder">Enter chatMessage</string>
    <string name="send_button_text">SEND</string>
    <string name="message_placeholder">Write a chatMessage...</string>
</resources>
