<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@color/colorPrimaryDark"
                                                   tools:context=".activities.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                                       xmlns:tools="http://schemas.android.com/tools"
                                                       android:layout_width="0dp"
                                                       android:layout_height="0dp"
                                                       android:layout_marginStart="8dp"
                                                       android:layout_marginTop="52dp"
                                                       android:layout_marginEnd="8dp"
                                                       android:layout_marginBottom="52dp"
                                                       android:background="@android:color/background_light"
                                                       app:layout_constraintBottom_toBottomOf="parent"
                                                       app:layout_constraintEnd_toEndOf="parent"
                                                       app:layout_constraintStart_toStartOf="parent"
                                                       app:layout_constraintTop_toTopOf="parent"
                                                       tools:context=".activities.SignInActivity">

        <TextView
                android:id="@+id/textViewUserId"
                android:layout_width="79dp"
                android:layout_height="38dp"
                android:text="@string/user_id"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.051"/>


        <EditText
                android:id="@+id/editTextUserId"
                android:layout_width="301dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.159"/>

        <TextView
                android:id="@+id/textViewToken"
                android:layout_width="83dp"
                android:layout_height="34dp"
                android:text="@string/token"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.348"/>

        <EditText
                android:id="@+id/editTextToken"
                android:layout_width="301dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.458"/>

        <Button
                android:id="@+id/signInButton"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:onClick="signIn"
                android:text="@string/login"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.88"/>

        <include
                android:id="@+id/spinnerProgressBar"
                layout="@layout/spinner_progress_bar"
                android:layout_width="69dp"
                android:layout_height="61dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.661"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>